--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "r2con2024"]
 	path = r2con2024
 	url = https://github.com/radareorg/r2con2024
+[submodule "r2con2025"]
+	path = r2con2025
+	url = https://github.com/radareorg/r2con2025
